--- a/ze/Makefile.am
+++ b/ze/Makefile.am
@@ -270,12 +270,11 @@ EXTRA_DIST += $(ZE_LIB_GEN)
 babeltrace_ze_callbacks.h: $(srcdir)/gen_babeltrace_ze_callbacks.rb ze_babeltrace_model.yaml
 	SRC_DIR=$(srcdir) $(RUBY) $< > $@
 
-babeltrace_ze_dispatchers.c: $(srcdir)/gen_babeltrace_ze_dispatchers.rb ze_babeltrace_model.yaml
-	SRC_DIR=$(srcdir) $(RUBY) $< > $@
+babeltrace_ze_dispatchers.c: $(top_srcdir)/utils/gen_babeltrace_dispatchers.rb ze_babeltrace_model.yaml
+	SRC_DIR=$(srcdir) $(RUBY) $< ze > $@
 
 EXTRA_DIST += \
-	gen_babeltrace_ze_callbacks.rb \
-	gen_babeltrace_ze_dispatchers.rb
+	gen_babeltrace_ze_callbacks.rb
 
 CLEANFILES += \
 	babeltrace_ze_callbacks.h \
