Search for demangle.h in libiberty folder also.

--- a/configure.ac
+++ b/configure.ac
@@ -46,6 +46,9 @@ fi
 # Checks for libraries.
 AC_CHECK_LIB([dl], [dlopen])
 AC_CHECK_LIB([iberty], [cplus_demangle])
+AC_CHECK_HEADERS([demangle.h], [using_demangle=yes], [using_demangle=no])
+AS_IF([test "x$using_demangle" != xyes],
+  [AC_CHECK_HEADERS([libiberty/demangle.h])])
 
 PKG_CHECK_MODULES([LIBFFI], [libffi >= 3.2])
 PKG_CHECK_MODULES([BABELTRACE2], [babeltrace2 >= 2.0])
