--- a/cuda/cuda_events.yaml
+++ b/cuda/cuda_events.yaml
@@ -53,3 +53,16 @@ lttng_ust_cuda_exports:
     - [ ctf_integer_hex, uintptr_t, pExportTableId, "(uintptr_t)pExportTableId" ]
     - [ ctf_integer, size_t, exportOffset, exportOffset ]
     - [ ctf_sequence_text, uint8_t, pExportTableId_val, pExportTableId, size_t, "sizeof(CUuuid)" ]
+lttng_ust_cuda_properties:
+  events:
+  - name: device
+    args:
+    - [ int,  ordinal ]
+    - [ CUdevice , device ]
+    - [ char *, name ]
+    - [ CUuuid *, uuid ]
+    fields:
+    - [ ctf_integer, int, ordinal, ordinal ]
+    - [ ctf_integer_hex, int, device, device ]
+    - [ ctf_string, name, name ]
+    - [ ctf_sequence_text, uint8_t, uuid, uuid, size_t, "sizeof(CUuuid)" ]
